--- a/styles.css
+++ b/styles.css
@@ -152,3 +152,112 @@
     transform: scale(1.1); 
     cursor: pointer; 
   }
+  .background-block2 {
+    background-color: #F5D3AB; 
+    height: 100vh; 
+    position: relative;
+     width:100%;
+  }
+  .content-section2{
+   margin-left:800px;
+   padding-top:40px;
+  }
+  .caption1{
+    font-family: "Oswald", sans-serif;
+    font-weight: 400;
+    font-size:16px;
+    line-height:32px;
+    letter-spacing: 3px;
+    color: #171B1B; 
+    align-items: flex-end;
+  }
+  .caption2{
+    font-family:"Ultra", serif;
+    font-weight: 700;
+    font-size:56px;
+    line-height:64px;
+    color:#171B1B;
+  }
+  .caption3{
+    margin-top:30px;
+    font-family: "Oswald", sans-serif;
+    font-weight: 400;
+    font-size:16px;
+    line-height:32px;
+    letter-spacing: 3px;
+    color:#171B1B;
+  }
+  .caption4{
+    font-family: "Oswald", sans-serif;
+    font-weight:400;
+    font-size:24px;
+    line-height:32px;
+    color:#171B1B;
+  }
+  .content1{
+    font-family: sans-serif;
+    font-weight:400;
+    font-size:16px;
+    line-height:32px;
+    color:#3333337F;
+  }
+  .caption5{
+    font-family: sans-serif;
+    font-weight:400;
+    font-size:16px;
+    line-height:32px;
+    color:#171B1B;
+  }
+  .caption6{
+    font-family: sans-serif;
+    font-weight:400;
+    font-size:16px;
+    line-height:32px;
+    color:#171B1B;
+  }
+  .caption7{
+    font-family: sans-serif;
+    font-weight:400;
+    font-size:16px;
+    line-height:32px;
+    color:#171B1B;
+  }
+  .background-block2 .image2 {
+    position: absolute; 
+    top: 20%; 
+    left: 10%; 
+    z-index: 1; 
+  }
+  .container2 .image2:nth-child(1){
+    z-index:1;
+    height:200px;
+    margin-left:20px;
+    top:10%;
+  }
+  .container2 .image2:nth-child(2) {
+    z-index: 2;
+    height:250px;
+    top:30%;
+    margin-left:60px;
+  }
+  .container2 .image2:nth-child(3) {
+    z-index: 0; 
+    height:500px;
+    margin-left:50px;
+  }
+  
+  .container2 .image2:nth-child(4) {
+    z-index: 4;
+    margin-left:290px;
+    height:150px;
+  }
+  .container2 .image2:nth-child(5) {
+    left:50%;
+    top:55%;
+  }
+  .background-block3{
+    background-color: #F5D3AB; 
+    height: 100vh; 
+    position: relative;
+     width:100%;
+  }
